added interceptors and validation logic

--- a/MyStruts2App/src/main/resources/com/app/action/registration/Registration.properties
+++ b/MyStruts2App/src/main/resources/com/app/action/registration/Registration.properties
@@ -1,6 +1,8 @@
 #Welcome messages
 registration.success = You are now a registered user.
 
+firstname.label = First Name
+
 #error message
 userId.required = Username is required
 password.required = Password is required
